# rensi-claude-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.es.md  README.md  aggregate.py  index.html  install.ps1  install.sh  pyproject.toml  serve.py
.github/workflows/: release.yml
rensi_dashboard/: aggregate.py  cli.py  core.py  server.py
rensi_dashboard/web/: index.html
