[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rensi-claude-dashboard"
version = "0.2.3"
description = "Self-hosted, mobile-first dashboard for Claude Code usage limits + a live sessions/workflows/agents view"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Breisner Lopez" }]
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=3.0",
]

[project.optional-dependencies]
official-limits = ["claude-monitor"]

[project.urls]
Homepage = "https://github.com/breisnerlopez/rensi-claude-dashboard"
Repository = "https://github.com/breisnerlopez/rensi-claude-dashboard"

[project.scripts]
rensi-dashboard = "rensi_dashboard.cli:main"

[project.gui-scripts]
rensi-dashboardw = "rensi_dashboard.cli:main"

[tool.setuptools]
packages = ["rensi_dashboard"]

[tool.setuptools.package-data]
rensi_dashboard = ["web/*.html"]
